Whoops, 'to_i' should be 'to_s', else 'false' becomes '0'

--- a/rails/templates/default/database.yml.erb
+++ b/rails/templates/default/database.yml.erb
@@ -14,7 +14,7 @@
   port: <%= @database[:port].to_i.inspect %>
 <% end -%>
 <% if @database[:strict] -%>
-  strict: <%= @database[:strict].to_i.inspect %>
+  strict: <%= @database[:strict].to_s.inspect %>
 <% end -%>
 
 <% end %>
