Setup HTTP->HTTPS forward based on AWS' ELB X-FORWARDED-PROTO header

--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -189,3 +189,10 @@ server {
   return 301 $scheme://<%= domain %>$request_uri;
 }
 <% end %>
+
+server {
+  <% domain = @application[:domains].first %>
+  if ($http_x_forwarded_proto = 'http') {
+    return 301 https://<%= domain %>.kidzworld.com$request_uri;
+  }
+}
